devex-1147: PO feedback fixes - fix vertical alignment in tables so they all are centered rather than some being top aligned and some being center aligned. Increase width of alerts so when user does "review and serve petition", the warning banner's title doesn't wrap.

--- a/web-client/src/styles/overrides.scss
+++ b/web-client/src/styles/overrides.scss
@@ -168,7 +168,7 @@ option:first-child {
 .usa-alert--success,
 .usa-alert--info,
 .usa-alert--warning {
-  max-width: 45em;
+  max-width: 48em;
   min-height: 50px;
 
   .usa-alert__heading {
