--- a/web-client/src/styles/tables.scss
+++ b/web-client/src/styles/tables.scss
@@ -26,7 +26,6 @@ table,
     padding-top: 18px;
     padding-bottom: 15px;
     background-color: transparent;
-    vertical-align: top;
   }
 
   p {
